<resources>
    <string name="app_name">Newport Perú</string>
    <string name="dni_hint">DNI</string>
    <string name="user_hint">USUARIO</string>
    <string name="pass_hint">CONTRASEÑA</string>
    <string name="new_pass_hint">NUEVA CONTRASEÑA</string>
    <string name="repeat_new_pass_hint">REPETIR CONTRASEÑA</string>
    <string name="sap_hint">CÓDIGO COLABORADOR</string>
    <string name="newport_mail_domain">@e-newport.pe</string>
    <string name="access_button">ACCEDER</string>
    <string name="register_button">REGISTRARSE</string>
    <string name="validation_code_hint">Código de validación</string>
    <string name="login_other_user"><u>Ingresa con otro usuario</u></string>
    <string name="title_dialog_verify_account">VERIFICACIÓN DE CUENTA</string>
    <string name="choice_option_dialog">Enviaremos un código de verificación a tu número de celular o correo, seleccione una opción</string>
    <string name="send_verify_dialog">Enviar</string>
    <string name="menu_item_news">Noticias</string>
    <string name="menu_item_events">Eventos</string>
    <string name="menu_item_question">Preguntas</string>
    <string name="menu_item_schedule">Horario</string>
    <string name="menu_item_profile">Perfil</string>
    <string name="menu_item_operations">Operaciones</string>
    <string name="news_title_fragment">Noticias</string>
    <string name="last_news_home_subtitle">ÚLTIMAS NOTICIAS</string>
    <string name="save_desition_button">GUARDAR</string>
    <string name="status_mundial_rank">CONOCE LOS MÁS RANKEADOS</string>
    <string name="logout_app_button">CERRAR SESIÓN</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="news_event_fragment">Eventos</string>
    <string name="gallery_event_fragment">Eventos - Galería</string>
    <string name="mundial_event_fragment">Cartilla Mundialista</string>
    <string name="schedule_viewer">Horario</string>
    <string name="boleta_pago">Boleta de Pago</string>
    <string name="newport_magazine">Revista</string>
    <string name="winner_label">Ganador</string>
    <string name="empate_label">Empate</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="internal_policies_tab">Políticas Internas</string>
    <string name="directory_tab">Directorio</string>
    <string name="see_information_policies_iternal">Ver información</string>
    <string name="example_bullet">\u2022 juliovillanueva@newport.com.pe</string>
    <string name="anexo_example">\u2022 anexo 2350</string>
    <string name="celular_example">\u2022 Celular 999999999</string>
    <string name="title_section_directory">Sección %s</string>
    <string name="schedule_fragment">Horarios</string>
    <string name="see_schedule_button">Ver Horarios</string>
    <string name="change_schedules">Solicitar Cambio</string>
    <string name="path_pathmorph_expandcollapse">M 1,-4 L 1,4 L -1,4 L -1,-4 Z</string>
    <string name="dia_a_cambiar">Dia a cambiar:</string>
    <string name="por_dia_a_cambiar">por:</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="perfil_fragment">Perfil</string>
    <string name="surname_hint">Apellido</string>
    <string name="birthday_hint">Cumpleaños</string>
    <string name="area_hint">Área de </string>
    <string name="position_hint">Cargo</string>
    <string name="date_join_enterprise_hint">Fecha de ingreso a la empresa</string>
    <string name="carnet_sanidad_hint">dd / mm / aaaa</string>
    <string name="in_time">¿Estoy a tiempo?</string>
    <string name="late_days">Días Tarde: %1$d día%2$s</string>
    <string name="time">Tiempo: %1$s</string>
    <string name="required_field">Campo requerido</string>
    <string name="incorrect_field">Campo Incorrecto. Vuelva a ingresar.</string>
    <string name="dni_unauthorized">DNI no autorizado</string>
    <string name="login_error">Error durante el logueo</string>
    <string name="already_paid">¡Ya pagaron!</string>
    <string name="update_to_month">Actualizado al %1$d de %2$s</string>
    <string name="upload_your_photos">¡Sube tus fotos!</string>
    <string name="be_party_reporter">Sé el reportero de la fiesta</string>
    <string name="relive_best_party">Revive lo mejor de la fiesta</string>
    <string name="discover_why_app">¡Descubre por qué creamos el app!</string>
    <string name="put_date_expire_carnet">Ingresa la fecha de caducidad de tu Carnet de Sanidad</string>
    <string name="lates_entry">Entrada</string>
    <string name="lates_launch">Almuerzo</string>
    <string name="lates">Tardanzas</string>
    <string name="carnet_is_expiring">Tu Carnet de Sanidad está a punto de expirar</string>
    <string name="retry_request">Reintentar</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="default_response_message_chat_app">Muchas gracias por comunicarse con nosotros. Les responderemos entre las 08:00 a.m. - 18:00 p.m.</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="lbl_horario">Horario:</string>
    <string name="see_request">VER SOLICITUDES</string>
    <string name="btn_registrarse">REGISTRARSE</string>
    <string name="hint_correo">CORREO</string>
    <string name="lbl_password_forgotten">Cambio de Contraseña - Olvido</string>
    <string name="btn_fogotten_password">CAMBIAR CONTRASEÑA</string>
    <string name="lbl_change_password">Cambio de Contraseña</string>
    <string name="lbl_haz_click_aqui">Haz click Aqui</string>
    <string name="lbl_link_web_mail"><u>http://mail.e-newport.pe:2095</u></string>
    <string name="lbl_forgotten_pass_advise">Se envió su nueva contraseña al correo web: </string>
</resources>