<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:background="@color/colorAccent"
    android:orientation="horizontal"
    android:padding="10dp">

    <com.newport.app.widget.RoundedImageView
        android:id="@+id/imgPerfil"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_weight="1"
        android:adjustViewBounds="true"
        android:contentDescription="@null"
        android:padding="7dp"
        android:src="@drawable/user_icon" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="3"
        android:paddingStart="10dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/lblNameContact"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:ellipsize="end"
            android:maxLines="1"
            android:textAllCaps="true"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            tools:text="Carlo Renzo Huamán Torres" />

        <TextView
            android:id="@+id/lblNameArea"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="1"
            tools:text="Gerente de Recursos Humanos" />

        <TextView
            android:id="@+id/lblEmailContact"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="1"
            tools:text="@string/example_bullet" />

        <TextView
            android:id="@+id/lblPhoneContact"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="1"
            tools:text="@string/anexo_example" />

        <TextView
            android:id="@+id/lblCellPhoneContact"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/celular_example"
            tools:text="@string/celular_example" />
    </LinearLayout>

</LinearLayout>